<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BitTweet</string>
    <string name="title_tweets_detail">Tweets Detail</string>
    <string name="retweeted_by">Retweeted by %1$s</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="home_timeline">Home</string>
    <string name="mentions_timeline">\@Mentions</string>
    <string name="media_expansion_desc">Attached media</string>

    <string-array name="nav_drawer_items">
        <item>Timeline</item>
        <item>Mentions</item>
        <item>Profile</item>
        <item>Settings</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_nav_timeline</item>
        <item>@drawable/ic_nav_mentions</item>
        <item>@drawable/ic_nav_profile</item>
    </array>

    <string name="login_text">Don\'t forget the pudding!</string>
    <string name="login_disclaim">綾鷹＠全力で穂乃果イベ(pixiv 1131370). This will not be in the final release.</string>
    <string name="login_button">Sign in via Twitter ≫</string>
    <string name="login_title">Sign in via Twitter</string>

    <string name="logout_title">Log Out of BitTweet?</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="logout_ok">Logout</string>
    <string name="logout_cancel">Cancel</string>

    <string name="title_activity_new_tweet">Compose Tweet</string>
    <string name="action_settings">Settings</string>
    <string name="action_attach_image">Attach image from gallery</string>
    <string name="tweet">Compose Tweet</string>
    <string name="action_tweet">Post</string>
    <string name="tweet_hint">What\'s happening right now?</string>
    <string name="avatar">Avatar</string>
    <string name="tweet_service_ongoing">Nonsense</string>
    <string name="its_you">you</string>
    <string name="in_reply_to">Replying to</string>

    <string name="add_image_camera">Take Picture</string>
    <string name="add_image_gallery">Choose from Gallery</string>
    <string name="remove_image">Remove Image</string>

    <string name="setting_category_account">Account Settings</string>
    <string name="setting_category_client">Client Settings</string>
    <string name="setting_category_feedback">Feedback</string>
    <string name="setting_category_credits">Credits</string>

    <string name="setting_logout">Signout</string>
    <string name="setting_streaming">Streaming on WiFi</string>
    <string name="setting_feedback_twitter">Send Feedback via Twitter</string>
    <string name="setting_feedback_twitter_desc">Tweet us feedback about the app</string>
    <string name="setting_credits">Credits</string>
    <string name="setting_credits_dev">Developers</string>
    <string name="setting_credits_art">Artists</string>
    <string name="setting_credits_loc">Translators</string>

    <string name="preference_streaming">Stream Settings Changed</string>
    <string name="streaming_name">The app will now restart to apply changes.</string>
    <string name="streaming_ok">OK</string>

    <string name="connection_title">No Internet Connection</string>
    <string name="connection_message">You must be connected to the Internet!</string>
    <string name="connection_cancel">Cancel</string>

    <string name="rate_limit_message_min">Rate limit exceeded! Try again in %1$d minutes!</string>
    <string name="rate_limit_message_min1">Rate limit exceeded! Try again in %1$d minute!</string>
    <string name="rate_limit_message_sec">Rate limit exceeded! Try again in %1$d seconds!</string>
    <string name="rate_limit_message_sec1">Rate limit exceeded! Try again in %1$d second!</string>

    <string name="title_activity_profile">Profile</string>
    <string name="profile_status_me">It\'s you!</string>
    <string name="profile_status_mutual">Mutual Follow</string>
    <string name="profile_status_notfollowed">Not following you</string>
    <string name="profile_status_followed">Following you</string>
    <string name="profile_verified">Verified</string>
    <string name="profile_protected">Protected</string>
    <string name="profile_tweet_count">Tweets</string>
    <string name="profile_follower_count">Followers</string>
    <string name="profile_following_count">Following</string>
    <string name="profile_favorites_count">Favorites</string>

    <string name="follow_user">Follow</string>
    <string name="unfollow_user">Unfollow</string>
    <string name="follow_error">Could not follow user. Please try again.</string>
    <string name="unfollow_error">Could not unfollow user. Please try again.</string>
    <string name="follow_success">Followed user!</string>
    <string name="unfollow_success">Unfollowed user.</string>

    <string name="tweet_updating">Updating status&#8230;</string>
    <string name="tweet_sent">Tweet sent!</string>
    <string name="tweet_error">Tweet failed to send</string>

    <string name="open_browser">Open in Browser</string>
</resources>
