<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:gravity="bottom"
        android:src="@drawable/background"
        android:adjustViewBounds="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:layout_gravity="bottom"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/blurback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:tint="#96ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:id="@+id/textView2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:background="@drawable/bittweet_activated_background_holo_light"
                android:id="@+id/button_login"
                android:fontFamily="sans-serif-thin"
                android:padding="5dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/login_disclaim"
                android:fontFamily="sans-serif-thin"
                android:textSize="14sp"
                android:ellipsize="none"
                android:id="@+id/textView3"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:layout_alignParentBottom="true" />

        </LinearLayout>

    </FrameLayout>

    <WebView
        android:id="@+id/webview"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"/>

</FrameLayout>